# figuini_tarea3_EDA

./: CMakeLists.txt  main.cpp
include/trees/: tree.hpp  treeList.hpp  treeNode.hpp
src/: tree.cpp  treeList.cpp  treeNode.cpp
tests/: test.cpp
trees/include/trees/: tree.hpp  treeList.hpp  treeListNode.hpp  treeNode.hpp
trees/src/: tree.cpp  treeList.cpp  treeListNode.cpp  treeNode.cpp
trees/tests/: test.cpp
